--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muie</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/styles/index-style.css">
+    <title>Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <div class='navbar'>
+      <h1>Weather app</h1>
+      <div class='controll-container'>
+        <div id='metric-switch'>
+          <p>°C</p>
+          <label class="switch">
+            <input type="checkbox" id='toggle'>
+            <span class="slider round"></span>
+          </label>
+          <p>°F</p>
+        </div>
+        <div class='searchbar'>
+          <input type="text" id='city-input' placeholder='Search for a city'>
+          <button id='search-button'>
+            <img id="search-icon" src="assets/search.svg" style='height: 24px;' alt="search icon">
+          </button>
+        </div>
+      </div>
+    </div>
+    </div>
+    <main>
+      <div class='weather-card' id='weather-card'>
+      </div>
+    </main>
+  </body>
 </html>
